--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Main background - #D4A76A*/
     background: #ffdbaa;
     color: #553100;
     margin: auto;
-    padding: 0 20px 0 20px;
+    /* padding: 0 20px 0 20px; */
     width: 100%;
     height: 10%;
     display: flex;
